src/test/ui/hrtb/hrtb-just-for-static.stderr
error[E0308]: mismatched types
  --> $DIR/hrtb-just-for-static.rs:24:5
   |
LL |     want_hrtb::<StaticInt>() //~ ERROR
   |     ^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Foo<&'a isize>`
              found type `Foo<&'static isize>`
   = note: lifetime RePlaceholder(Placeholder { universe: U1, name: BrNamed(crate0:DefIndex(1:11), 'a) })...
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
